feat(ci): agregar pipeline unificado de GitHub Actions